# deep-research-agent

./: .gitignore  README.md  sample_dir.md
apps/backend/: .env.example  Dockerfile  pyproject.toml
apps/backend/app/: config.py  database.py  main.py
apps/backend/app/mcp_manager/: catalog.py  crypto.py  manager.py  session.py
apps/backend/app/models/: __init__.py  mcp_catalog.py  schemas.py  user_mcp.py
apps/backend/app/routers/: chat.py  mcp.py
apps/mcp_search_server/: .env.example  README.md  pyproject.toml
apps/mcp_search_server/src/mcp_search/: config.py  server.py
apps/mcp_search_server/src/mcp_search/models/: extract.py  search.py
apps/mcp_search_server/src/mcp_search/services/: batch_crawler.py  batch_extractor.py  cache.py  crawler.py  extractor.py  fetcher.py  searxng.py
apps/mcp_search_server/src/mcp_search/tools/: crawl.py  extract.py  search.py
apps/ui/: package-lock.json  package.json
apps/ui/app/: layout.tsx  page.tsx
apps/ui/components/: ChatPanel.tsx  McpCard.tsx  McpModal.tsx  McpSidebar.tsx
apps/ui/lib/: api.ts  useUserId.ts
brain/: Dockerfile  pyproject.toml
brain/app/: config.py  main.py
brain/app/agents/: .gitkeep
brain/app/mcp_client/: client.py
infra/: README.md  docker-compose.yml  prometheus.yml
infra/backend/: docker-compose.yml
infra/frontend/: docker-compose.yml
infra/litellm/: .env  .env.example  config.yaml  docker-compose.yml
infra/searxng/: docker-compose.yml
infra/searxng/searxng/: limiter.toml  settings.yml
